# llvm-semantics

./: .gitattributes  .gitignore  .hgignore  DeleteLLVMComments.java  LICENSE  Makefile  README.md  TODO.md  externalParser  syntaxTestScript
c-programs/: script~
llvm-xml-ir/: CMakeLists.txt  LICENSE.txt
parser/: Makefile  llvm.sdf  parse  xmlToK.pl
progress1/: report.md
proposal/: proposal.md
semantics/: .gitignore  Makefile  ctl-optim.k  ctl-semantics.k  designs  llvm-abstractsyntax.k  llvm-branching.k  llvm-call-ret.k  llvm-clean-tree.k  llvm-configuration.k  llvm-ctl-optim.k  llvm-ctl.k  llvm-declarations.k  llvm-globals.k  llvm-helpers.k  llvm-normalizing.k  llvm-phi.k  llvm-preprocessing.k  llvm-registers.k  llvm-selection.k  llvm-semantics.k  llvm-settings.k  llvm-standard-library-syntax.k  llvm-start-and-stop.k  llvm-syntax-real.k  llvm-syntax-x.k  llvm-syntax.k  llvm-syscalls-syntax.k  llvm-variadics.k  llvm.desk  llvm.k  llvm_errors.txt  script  todo.txt
tools/llvm-dis-xml/: CMakeLists.txt
tools/llvm-dis-xml/include/llvm-dis-xml/: AsmXMLWriter.h  Operator.def  RawWriter.h
tools/llvm-dis-xml/lib/ASMXMLWriter/: AsmXMLWriter.cc  CMakeLists.txt  RawWriter.cc  SlotTracker.cc  XMLIROStream.cc  base64encode.cc
tools/llvm-dis-xml/make/Modules/: FindLLVM.cmake
tools/llvm-dis-xml/scripts/: xml-test-wrapper.py
tools/llvm-dis-xml/tests/c-semantics/: CMakeLists.txt  base64.c  bubblesort.c  duffsDevice.c  fib.c  gotoStatic.c  helloworld.c  md5.c  reverse.c  schorr-waite.c  sumn.c  testStatic2.c
tools/llvm-dis-xml/tools/: CMakeLists.txt  llvm-dis-xml.cc
(+10340 files in other folders)
